# embassy

./: Cargo.toml
.github/workflows/: rust.yml
embassy-macros/src/: lib.rs
embassy-net/: Cargo.toml
embassy-net-examples/: Cargo.toml
embassy-net-examples/src/: main.rs
embassy-net/src/: lib.rs  packet_pool.rs  stack.rs  tcp_socket.rs  tuntap.rs
embassy-nrf-examples/: Cargo.toml
embassy-nrf-examples/.cargo/: config
embassy-nrf/src/: buffered_uarte.rs  gpio.rs  lib.rs  ring_buffer.rs
embassy-rp/: Cargo.toml
embassy-rp-examples/: Cargo.toml
embassy-rp-examples/.cargo/: config
embassy-rp-examples/src/: main.rs
embassy-rp/src/: dma.rs  gpio.rs  init.rs  lib.rs  uart.rs
embassy-stm32/src/usart/: v1.rs
embassy/src/util/: mutex.rs  signal.rs
