[package]
name = "embassy-rp"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]

[dependencies]
embassy = { version = "0.1.0", path = "../embassy" }

defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", optional = true }
cortex-m-rt = "0.6.13"
cortex-m = "0.7.1"

rp2040-pac2 = { version = "0.1.0", features = ["rt"] }
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
